<resources>
    <string name="app_name">Faircorp</string>
    <string name="act_main_windowname_hint">Light name</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>

    <string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
</resources>